Added basic html structure and css layout. Also added css animation for flash messages that fades them in and out.

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,17 @@
 <header id="site_header" class="container">
-    <%= button_to(
-            "Log Out",
-            destroy_user_session_path,
-            method: :delete
-        ) %>
+    <h1 id="site_logo">Site Title</h1>
+
+    <nav id="account_links">
+        <% if user_signed_in? %>
+            <%= button_to(
+                    "Log Out",
+                    destroy_user_session_path,
+                    method: :delete
+                ) %> |
+            <%= current_user.email %>
+        <% else %>
+            <%= link_to "Sign In", new_user_session_path, class: "btn block" %>
+            <%= link_to "Sign Up", new_user_registration_path, class: "btn block" %>
+        <% end %>
+    </nav>
 </header>
