--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,6 +4,7 @@
     <li>Pages controller for basic pages like this homepage</li>
     <li>Devise installed, and setup to be used with HotWire</li>
 </ul>
-
-<%= link_to "Sign In", new_user_session_path, class: "btn block" %>
-<%= link_to "Sign Up", new_user_registration_path, class: "btn block" %>
+<% if !user_signed_in? %>
+    <%= link_to "Sign In", new_user_session_path, class: "btn block" %>
+    <%= link_to "Sign Up", new_user_registration_path, class: "btn block" %>
+<% end %>
