--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,6 +11,7 @@
             <%= current_user.email %>
         <% else %>
             <%= link_to "Sign In", new_user_session_path, class: "btn block" %>
+            <span>|</span> 
             <%= link_to "Sign Up", new_user_registration_path, class: "btn block" %>
         <% end %>
     </nav>
