Updated README.md to describe how flash messages are setup to work in future controller actions

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
 
 <h2>The app has the following setup:</h2>
 <ul>
-    <li>Pages controller for basic pages like this <%= link_to "Home page", pages_home_path() %></li>
+    <li>Pages controller for basic pages like this <%= link_to "Home page", pages_home_path %></li>
     <li>Devise installed, and <%= link_to "setup to be used with HotWire", "https://betterprogramming.pub/devise-auth-setup-in-rails-7-44240aaed4be" %></li>
 </ul>
 
